--- a/web_app/static/style/style.css
+++ b/web_app/static/style/style.css
@@ -3,9 +3,13 @@
 /*Arquivos de estilização internos*/
 @import url("login.css");
 
+/*Arquivos de estilização externos*/
+/*Fontes: MontSerrat*/
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap");
+
 * {
 	margin: 0;
 	padding: 0;
 
-	font-family: sans-serif;
+	font-family: Montserrat, sans-serif;
 }
