--- a/web_app/contatos/templates/contatos/login.html
+++ b/web_app/contatos/templates/contatos/login.html
@@ -9,7 +9,7 @@
 	<!--Colocar o CSS e um ícone da página-->
 	{% load static %}
 	
-	<link rel="stylesheet" href="{% static 'style/style.css'%}">
+	<link rel="stylesheet" href="{% static 'style/login.css'%}">
 
 	<link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 </head>
