--- a/web_app/static/style/style.css
+++ b/web_app/static/style/style.css
@@ -1,8 +1,5 @@
 @charset "utf-8";
 
-/*Arquivos de estilização internos*/
-@import url("login.css");
-
 /*Arquivos de estilização externos*/
 /*Fontes: MontSerrat*/
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap");
@@ -12,4 +9,10 @@
 	padding: 0;
 
 	font-family: Montserrat, sans-serif;
+}
+
+:root {
+	--verdeEscuro: #006835;
+	--cinza: #55595C;
+	--verdeCLaro: #70BF54;
 }
