--- a/web_app/static/style/login.css
+++ b/web_app/static/style/login.css
@@ -32,17 +32,20 @@
 	text-transform: uppercase;
 }
 
+.alert-text {
+	color: #f00;
+	font-size: 15px;
+
+	text-transform: capitalize;
+}
+
 #login-form {
 	max-width: 350px;
 	margin: auto;
 }
 
-.div-input {
-	
-}
-
 .text-label-input {
-	color: #777;
+	color: #333;
 	font-size: 10px;
 	text-transform: uppercase;
 }
@@ -61,11 +64,18 @@
 	cursor: pointer;
 }
 
+.input-login:focus {
+	outline: 0;
+}
+
+.input-login::placeholder {
+	color: #999;
+	text-transform: capitalize;
+}
+
 .input-login {
 	width: 100%;
 	border: none;
-
-	text-transform: capitalize;
 }
 
 .container-forget-passwd {
@@ -76,7 +86,7 @@
 }
 
 #forget-passwd:hover {
-	font-weight: bold;
+	font-weight: 500;
 }
 
 #forget-passwd {
