--- a/web_app/static/style/login.css
+++ b/web_app/static/style/login.css
@@ -10,6 +10,7 @@
 .login-main {
 	display: flex;
 	align-items: center;
+	justify-content: center;
 	flex-direction: column;
 	row-gap: 30px;
 
@@ -37,7 +38,7 @@
 }
 
 hr {
-	width: 70%;
+	width: 60%;
 }
 
 .login-card {
