Separação do menu do arquivo base para o arquivo menu

--- a/web_app/contatos/templates/base/base.html
+++ b/web_app/contatos/templates/base/base.html
@@ -14,20 +14,7 @@
 	<link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 </head>
 <body class="body-base">
-	<!--menu.html-->
-		<header class="menu-vertical">
-			<nav class="header-nav">
-				<a href="#" id="header-logo"><img src="../sistema_IABS/web_app/static/image/iabs_logo2.png" alt="Logo IABS" class="img-inside-header"></a>
-				<a href="#" class="header-opc"><span class="opc-icon"><i class="bx bx-group"></i></span><span class="opc-text">parceiro</span></a>
-				<a href="#" class="header-opc"><span class="opc-icon"><i class="bx bx-calendar-event"></i></span><span class="opc-text">reunião</span></a>
-
-				<hr class="hr-menu">
-
-				<a href="#" class="header-out-system"><span class="out-system-icon">Icon</span><span class="opc-text out-system-text">sair</span></a>
-
-			</nav>
-		</header>
-	<!--base.html-->
+	{% include "base/menu.html" %}
 	<main>
 		{% include "base/search_bar.html" %}
 		{% block content %}
