--- a/web_app/static/style/style.css
+++ b/web_app/static/style/style.css
@@ -14,5 +14,158 @@
 :root {
 	--verdeEscuro: #006835;
 	--cinza: #55595C;
-	--verdeCLaro: #70BF54;
+	--verdeClaro: #70BF54;
+}
+
+.body-base {
+	display: grid;
+	grid-template-columns: 15%  1fr;
+}
+
+/*header*/
+header {
+	background: var(--verdeEscuro);
+
+	width: 100%;
+	height: calc(100vh - 60px);
+	padding: 50px 0 10px;
+
+	overflow: hidden;
+
+}
+
+.header-nav {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	row-gap: .7em;
+
+	width: 100%;
+	height: 100%
+}
+
+a {
+	color: inherit;
+	text-decoration: none;
+}
+
+#header-logo {
+	display: flex;
+	align-items: center;
+	justify-content: center;
+
+	background: #d9d9d9;
+
+	width: 130px;
+	height: 130px;
+	padding: 1%;
+	margin-bottom:30px;
+	border-radius: 50%;
+}
+
+#header-logo > img {
+	width: 90%;
+	heidth: auto;
+}
+
+.header-opc:focus {
+	background: var(--verdeClaro);
+
+	border-radius: 20px 0 0 20px;
+}
+
+.header-opc {
+	display: flex;
+	align-items: center;
+	justify-content: left;
+	column-gap: 2.5em;
+
+	text-align: center;
+
+	width: calc(100% - 20px);
+	padding: 5px 0 5px 20px;
+}
+
+.opc-icon {
+	color: #000;
+	font-size: 30px;
+}
+
+.opc-text {
+	color: #fff;
+	font-size: 20px;
+	font-weight: 600;
+	text-transform: capitalize;
+}
+
+.hr-menu {
+	width: 80%;
+	margin-top: 30px;
+}
+
+.header-out-system {
+	align-self: start;
+
+	margin-top: auto;
+	margin-left: 10px;
+}
+
+.out-system-icon {
+	color: #fff;
+}
+
+.out-system-text {
+	font-size: 22px;
+	text-transform: uppercase;
+}
+
+/*main*/
+main {
+	background: var(--verdeClaro);
+	padding: 20px 0;
+}
+
+.search-bar {
+	display: flex;
+	align-items: center;
+	justify-content: center;
+
+	background: #ddd;
+
+	width: fit-content;
+	height: 30px;
+	margin: auto;
+	padding: 5px 10px;
+	border-radius: 20px;
+}
+
+.input-search:-webkit-autofill {
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: none !important;
+}
+
+.input-search:focus {
+	outline: 0;
+}
+
+.input-search::placeholder {
+	color: #999;
+	text-transform: capitalize;
+}
+
+.input-search {
+	background: none;
+	font-size: 16px;
+
+	width: 600px;
+	height: 30px;
+	border: none;
+}
+
+.btn-search {
+	background: none;
+	font-size: 20px;
+
+	border: none;
+	cursor: pointer;
 }
