--- a/web_app/contatos/templates/base/menu.html
+++ b/web_app/contatos/templates/base/menu.html
@@ -8,6 +8,7 @@
 		<hr class="hr-menu">
 
 		<a href="#" class="header-out-system"><span class="out-system-icon">Icon</span><span class="opc-text out-system-text">sair</span></a>
+		<div id="modal-logout"></div>
 
 	</nav>
 </header>
