--- a/web_app/contatos/templates/base/menu.html
+++ b/web_app/contatos/templates/base/menu.html
@@ -7,7 +7,7 @@
 
 		<hr class="hr-menu">
 
-		<a href="#" class="header-out-system"><span class="out-system-icon">Icon</span><span class="opc-text out-system-text">sair</span></a>
+		<a href="#" class="header-out-system" id="btn-logout" data-modal-url="{% url 'logout_confirm_modal' %}"><span class="out-system-icon">Icon</span><span class="opc-text out-system-text">sair</span></a>
 		<div id="modal-logout"></div>
 
 	</nav>
