--- a/web_app/contatos/templates/base/system_out_message.html
+++ b/web_app/contatos/templates/base/system_out_message.html
@@ -1,4 +1,5 @@
-<div class="modal-system-out">
+<div class="modal-background" id="modal-backdrop"></div>
+<div class="modal-system-out" id="modal-dialog">
 	<div class="modal-content" id="logout-modal-content">
 		<header class="modal-header">
 			<h5 class="modal-title">atenção! fechando o sistema</h5>
@@ -7,8 +8,8 @@
 			<p>você tem certeza que deseja sair do sistema?</p>
 		</main>
 		<footer class="modal-footer">
-			<a href="{% url 'logout' %}" class="btn btn-confirm-primary" id="confirm-logout">sair</a>
-			<button type="button" class="btn btn-confirm-second">cancelar</button>
+			<a href="{% url 'logout' %}" class="btn-modal btn-confirm-primary" id="confirm-logout">sair</a>
+			<button type="button" class="btn-modal btn-confirm-second btn-cancel">cancelar</button>
 		</footer>
 	</div>
 </div>
