--- a/web_app/static/style/style.css
+++ b/web_app/static/style/style.css
@@ -1,5 +1,7 @@
 @charset "utf-8";
 
+@import url("modal.css");
+
 /*Arquivos de estilização externos*/
 /*Fontes: MontSerrat*/
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap");
