Generalização do modal de aviso e confirmação

--- a/web_app/contatos/templates/base/menu.html
+++ b/web_app/contatos/templates/base/menu.html
@@ -7,8 +7,8 @@
 
 		<hr class="hr-menu">
 
-		<a href="#" class="header-out-system" id="btn-logout" data-modal-url="{% url 'logout_confirm_modal' %}"><span class="out-system-icon">Icon</span><span class="opc-text out-system-text">sair</span></a>
-		<div id="modal-logout"></div>
+		<a href="#" class="header-out-system" id="btn-logout" data-modal-url="{% url 'logout_confirm' %}"><span class="out-system-icon">Icon</span><span class="opc-text out-system-text">sair</span></a>
+		<div id="modal-generic"></div>
 
 	</nav>
 </header>
