--- a/web_app/contatos/templates/base/system_out_message.html
+++ b/web_app/contatos/templates/base/system_out_message.html
@@ -8,7 +8,7 @@
 			<p>você tem certeza que deseja sair do sistema?</p>
 		</main>
 		<footer class="modal-footer">
-			<a href="{% url 'logout' %}" class="btn-modal btn-confirm-primary" id="confirm-logout">sair</a>
+			<a href="{% url 'logout' %}" class="btn-modal btn-confirm-primary" id="confirm-logout">confirmar</a>
 			<button type="button" class="btn-modal btn-confirm-second btn-cancel">cancelar</button>
 		</footer>
 	</div>
