--- a/web_app/static/style/modal.css
+++ b/web_app/static/style/modal.css
@@ -4,7 +4,7 @@ body.modal-open {
 	overflow: hidden;
 }
 
-.modal-background, .modal-system-out {
+.modal-background, .modal-dialog {
 	display: none;
 }
 
@@ -18,7 +18,7 @@ body.modal-open {
 	z-index: 1000; 
 }
 
-.modal-system-out {
+.modal-dialog {
 	position: fixed;
 	top: 50%;
 	left: 50%;
@@ -47,6 +47,10 @@ body.modal-open {
 }
 
 .modal-header {
+	display: flex;
+	align-items: center;
+	justify-content: space-between;
+
 	font-size: 20px;
 	font-weight: 600;
 	text-transform: capitalize;
@@ -86,6 +90,15 @@ body.modal-open {
 	margin-right: 10px;
 }
 
-.btn-confirm-second {
+.btn-confirm-secondary {
 	background: #ec221f;
+}
+
+.btn-close {
+	font-size: 35px;
+	background:none;
+
+	border: none;
+
+	cursor: pointer;
 }
