--- a/web_app/contatos/templates/base/base.html
+++ b/web_app/contatos/templates/base/base.html
@@ -9,7 +9,8 @@
 	<!--Colocar o CSS e um ícone da página-->
 	{% load static %}
 
-	<link rel="stylesheet" href="{% static 'style/style.css'%}">
+	<link rel="stylesheet" href="{% static 'style/style.css'%} ">
+	<link rel="stylesheet" href="{% static 'style/card-page.css' %}">
 
 	<link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 </head>
