Correção de grafia e criação da página das reuniões

--- a/web_app/contatos/templates/contatos/login.html
+++ b/web_app/contatos/templates/contatos/login.html
@@ -4,7 +4,7 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-	<title>Login</title>
+	<title>Login |IABS</title>
 
 	<!--Colocar o CSS e um ícone da página-->
 	{% load static %}
