Criação da classe ativado, para os links do menu que estão ativados e criação das view e url para parceiros e reuniões

--- a/web_app/static/style/style.css
+++ b/web_app/static/style/style.css
@@ -70,7 +70,7 @@ a {
 	height: auto;
 }
 
-.header-opc:focus {
+.header-opc-active, .header-opc:focus, .header-opc:hover {
 	background: var(--verdeClaro);
 
 	border-radius: 20px 0 0 20px;
