--- a/web_app/contatos/templates/base/base_card_page.html
+++ b/web_app/contatos/templates/base/base_card_page.html
@@ -5,8 +5,8 @@
     </div>
     <div class="card-page-button">
         <a href="{% block card_info_url %}#{% endblock %}" class="btn-card-page-info">informações</a>
-        {% if action_name %}
+        {% block particular_name %}
         <a href="{% block card_action_url %}#{% endblock %}" class="btn-card-page-new-action">{% block action_name %}text{% endblock %}</a>
-        {% endif %}
+        {% endblock %}
     </div>
 </div>
