--- a/web_app/contatos/templates/contatos/parceiro.html
+++ b/web_app/contatos/templates/contatos/parceiro.html
@@ -3,6 +3,6 @@
 {% block title %}Parceiros{% endblock %}
 
 {% block content %}
-<h1>Hello world</h1>
+{% include "base/base_card_parceiro.html" with status=parceiro.status name=parceiro.name %}
 <p>parceiros</p>
 {% endblock %}
