--- a/web_app/contatos/templates/contatos/reuniao.html
+++ b/web_app/contatos/templates/contatos/reuniao.html
@@ -1,8 +1,8 @@
-{% extends "base/base.html" %}
+{% extends "base/base_info_page.html" %}
 
-{% block title %}Parceiros{% endblock %}
+{% block title %}Reuniões{% endblock %}
 
-{% block content %}
+{% block info_page %}
 <h1>Hello world</h1>
 <p>reuniões</p>
 {% endblock %}
