Estilização inicial para a página com os conteúdos

--- a/web_app/contatos/templates/base/base.html
+++ b/web_app/contatos/templates/base/base.html
@@ -11,6 +11,7 @@
 
 	<link rel="stylesheet" href="{% static 'style/style.css'%} ">
 	<link rel="stylesheet" href="{% static 'style/card-page.css' %}">
+	<link rel="stylesheet" href="{% static 'style/main_page.css' %}">
 
 	<link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 </head>
