--- a/web_app/contatos/templates/contatos/parceiro.html
+++ b/web_app/contatos/templates/contatos/parceiro.html
@@ -6,3 +6,6 @@
 {% include "base/base_card_parceiro.html" with status=parceiro.status name=parceiro.name %}
 <p>parceiros</p>
 {% endblock %}
+{% block aside_content %}
+    {% include "base/register_modal.html" %}
+{% endblock %}
