--- a/web_app/static/style/main_page.css
+++ b/web_app/static/style/main_page.css
@@ -1,7 +1,8 @@
 .main-content-page {
     display: grid;
     grid-template-rows: 10% 1fr;
-    grid-template-columns: 70% 30%;
+    grid-template-columns: 65% 30%;
+    column-gap: 5%;
 
     padding: 20px 50px;
 }
