--- a/web_app/contatos/templates/contatos/reuniao.html
+++ b/web_app/contatos/templates/contatos/reuniao.html
@@ -1,8 +1,11 @@
-{% extends "base/base_info_page.html" %}
+{% extends "base/base_main_page.html" %}
 
 {% block title %}Reuniões{% endblock %}
 
 {% block info_page %}
-<h1>Hello world</h1>
-<p>reuniões</p>
+{% block main_content_list %}
+    <h1>Hello World</h1>
+{% endblock %}
+{% block aside_content %}
+    {% include "base/register_modal.html" %}
 {% endblock %}
