--- a/web_app/contatos/templates/base/base_card_page.html
+++ b/web_app/contatos/templates/base/base_card_page.html
@@ -1,12 +1,12 @@
 <div class="card-page">
-    <div class="card-page-message">
-        {% block content %}
-        {% endblock %}
-    </div>
-    <div class="card-page-button">
-        <a href="{% block card_info_url %}#{% endblock %}" class="btn-card-page-info">informações</a>
-        {% block particular_name %}
-        <a href="{% block card_action_url %}#{% endblock %}" class="btn-card-page-new-action">{% block action_name %}text{% endblock %}</a>
-        {% endblock %}
-    </div>
+	<div class="card-page-message">
+		{% block content %}
+		{% endblock %}
+	</div>
+	<div class="card-page-button">
+		<a href="{% block card_info_url %}#{% endblock %}" class="btn-card-page-info">informações</a>
+		{% block particular_action %}
+		<a href="{% block card_action_url %}#{% endblock %}" class="btn-card-page-new-action">{% block action_name %}text{% endblock %}</a>
+		{% endblock %}
+	</div>
 </div>
