--- a/web_app/contatos/templates/base/base_card_parceiro.html
+++ b/web_app/contatos/templates/base/base_card_parceiro.html
@@ -7,7 +7,7 @@
 </div>
 {% endblock %}
 
-{% block card_info_url %}{% url "dados_page" %}{% endblock %}
+{% block card_info_url %}#{% endblock %}
 
 {% block particular_action %}
 <div class="status-parceiro-widget {% if status == 'ativo' %}status-green{% else %}status-red{% endif %}"></div>
