--- a/web_app/contatos/templates/base/base_info_page.html
+++ b/web_app/contatos/templates/base/base_info_page.html
@@ -6,7 +6,7 @@
 			<form>
 				{% for field in form %}
 					<div class="form-group">
-						<span class="text-label-info">{{ field.label }}</span>
+						<span class="text-label-info">{{ field.label_tag }}</span>
 						{{ field }}
 					</div>
 				{% endfor %}
