--- a/web_app/static/style/info_page.css
+++ b/web_app/static/style/info_page.css
@@ -17,7 +17,23 @@
 
 .form-info > form {
 	display: flex;
-	flex-flow: column wrap;
+	flex-flow: row wrap;
 
+	width: 100%;
 	height: 80%;
+
+	overflow: auto;
+}
+
+.form-group {
+	width: 50%;
+	margin-bottom: 5px;
+}
+
+.text-label-info {
+	display: block;
+
+	color: #fff;
+	font-weight: 600;
+	text-transform: capitalize;
 }
