--- a/web_app/static/style/info_page.css
+++ b/web_app/static/style/info_page.css
@@ -8,6 +8,7 @@
 
 .title-info-page {
 	text-transform: capitalize;
+	margin-bottom: 20px;
 }
 
 .form-info {
@@ -18,16 +19,18 @@
 .form-info > form {
 	display: flex;
 	flex-flow: row wrap;
+	column-gap: 9%;
 
 	width: 100%;
 	height: 80%;
+	padding-right: 1%;
 
 	overflow: auto;
 }
 
 .form-group {
-	width: 50%;
-	margin-bottom: 5px;
+	width: 45%;
+	margin-bottom: 10px;
 }
 
 .text-label-info {
@@ -36,4 +39,34 @@
 	color: #fff;
 	font-weight: 600;
 	text-transform: capitalize;
+
+	margin-left: 5px;
+	margin-bottom: 5px;
+}
+
+.info-page-input {
+	width: calc(100% - 10px);
+	padding: 5px;
+	border: none;
+	border-radius: 3px;
+
+	cursor: default;
+}
+
+.btn-data-page-container {
+	margin-top: 20px;
+}
+
+.btn-data-page {
+	color: #fff;
+	background: #00000040;
+	font-size: 14px;
+	font-weight: 600;
+	text-transform: uppercase;
+
+	padding: 5px 20px;
+	border: none;
+	border-radius: 25px;
+
+	cursor: pointer;
 }
