--- a/web_app/contatos/templates/base/base_card_parceiro.html
+++ b/web_app/contatos/templates/base/base_card_parceiro.html
@@ -2,7 +2,7 @@
 {% block content %}
 <div class="card-page-img-parceiro"></div>
 <div class="card-page-text-parceiro">
-    <p class="card-page-status-parceiro">{{ status }}</p>
+    <p class="card-page-status-parceiro">{% if status == 'A' %}ativo{% else %}inativo{% endif %}</p>
     <h3 class="card-page-name-parceiro">{{ name }}</h3>
 </div>
 {% endblock %}
@@ -10,5 +10,5 @@
 {% block card_info_url %}{% url "parceiro_detail" pk=1 %}{% endblock %}
 
 {% block particular_action %}
-<div class="status-parceiro-widget {% if status == 'ativo' %}status-green{% else %}status-red{% endif %}"></div>
+<div class="status-parceiro-widget {% if status == 'A' %}status-green{% else %}status-red{% endif %}"></div>
 {% endblock %}
