--- a/web_app/contatos/templates/base/base_info_page.html
+++ b/web_app/contatos/templates/base/base_info_page.html
@@ -7,7 +7,17 @@
 				{% for field in form %}
 					<div class="form-group">
 						<span class="text-label-info">{{ field.label_tag }}</span>
-						{{ field }}
+						{% if field.name == 'tipo' %}
+							<div class="radio-container">
+							{% for radio in field %}
+								<div class="radio-option">
+								{{ radio.tag }} <label for="{{radio.id_for_label}}">{{ radio.choice_label }}</label>
+								</div>
+							{% endfor %}
+							</div>
+						{% else %}
+							{{ field }}
+						{% endif %}
 					</div>
 				{% endfor %}
 			</form>
