--- a/web_app/contatos/templates/contatos/parceiro.html
+++ b/web_app/contatos/templates/contatos/parceiro.html
@@ -3,7 +3,9 @@
 {% block title %}Parceiros{% endblock %}
 
 {% block main_content_list %}
-{% include "base/base_card_parceiro.html" with status=parceiro.status name=parceiro.name %}
+{% for parceiro in parceiros %}
+	{% include "base/base_card_parceiro.html" with status=parceiro.status name=parceiro.nome %}
+{% endfor %}
 {% endblock %}
 {% block aside_content %}
     {% include "base/register_modal.html" %}
