--- a/web_app/static/style/info_page.css
+++ b/web_app/static/style/info_page.css
@@ -44,6 +44,17 @@
 	margin-bottom: 5px;
 }
 
+.radio-container {
+	display: flex;
+	flex-wrap: wrap;
+	align-items: center;
+}
+
+.radio-option {
+	display: flex;
+	align-items: center;
+}
+
 .info-page-input {
 	width: calc(100% - 10px);
 	padding: 5px;
