Estilização do formulário: incompleto

--- a/web_app/contatos/templates/base/base_info_page.html
+++ b/web_app/contatos/templates/base/base_info_page.html
@@ -11,7 +11,7 @@
 							<div class="radio-container">
 							{% for radio in field %}
 								<div class="radio-option">
-								{{ radio.tag }} <label for="{{radio.id_for_label}}">{{ radio.choice_label }}</label>
+								{{ radio.tag }} <label for="{{radio.id_for_label}}" class="text-label-info text-label-info-radio">{{ radio.choice_label }}</label>
 								</div>
 							{% endfor %}
 							</div>
