--- a/web_app/static/style/info_page.css
+++ b/web_app/static/style/info_page.css
@@ -13,7 +13,7 @@
 
 .form-info {
 	width: 100%;
-	height: 100%;
+	height: calc(100% - 20px);
 }
 
 .form-info > form {
@@ -44,15 +44,44 @@
 	margin-bottom: 5px;
 }
 
+.adress-group {
+	display: flex;
+	align-items: center;
+	flex-wrap: wrap;
+}
+
 .radio-container {
 	display: flex;
 	flex-wrap: wrap;
 	align-items: center;
+	column-gap: 1em;
+
+	margin-left: 30px;
 }
 
 .radio-option {
 	display: flex;
 	align-items: center;
+}
+
+.text-label-info-radio {
+	display: block;
+
+	white-space: nowrap;
+
+	width: fit-content;
+	margin-bottom: 0;
+}
+
+input[disabled], select[disabled], textarea[disabled],
+input[readonly], select[readonly], textarea[readonly] {
+	background: #fff;
+	color: #000;
+	cursor: not-allowed;
+	pointer-events: none;
+	opacity: 1;
+	border: 1px solid #ced4da;
+	box-shadow: none;
 }
 
 .info-page-input {
