--- a/web_app/contatos/templates/base/register_modal.html
+++ b/web_app/contatos/templates/base/register_modal.html
@@ -5,5 +5,5 @@
             Cadastrar {% if pagina.tipo == "parceiro" %}parceiro{% elif pagina.tipo == "reuniao" %}reunião{% endif %}
         </span>
     </div>
-    <button class="btn-modal-register">cadastrar</button>
+    <a href="{{ url }}" class="btn-modal-register">cadastrar</a>
 </div>
