--- a/web_app/contatos/templates/base/base_info_page.html
+++ b/web_app/contatos/templates/base/base_info_page.html
@@ -25,7 +25,7 @@
 			</form>
 			<div class="btn-data-page-container">
 				<button onclick="window.history.back()" class="btn-data-page">voltar</button>
-				<a href="#" class="btn-data-page">editar</a>
+				<a href="{{ edit_url }}" class="btn-data-page">editar</a>
 			</div>
         </div>
     </main>
