--- a/web_app/contatos/templates/contatos/parceiro.html
+++ b/web_app/contatos/templates/contatos/parceiro.html
@@ -8,5 +8,6 @@
 {% endfor %}
 {% endblock %}
 {% block aside_content %}
-    {% include "base/register_modal.html" %}
+	{% url "parceiro_create" as url_parceiro_create %}
+    {% include "base/register_modal.html" with url=url_parceiro_create %}
 {% endblock %}
