--- a/web_app/static/style/modal.css
+++ b/web_app/static/style/modal.css
@@ -116,13 +116,16 @@ body.modal-open {
 }
 
 .btn-modal-register {
+	display: block;
+
 	color: #fff;
 	font-size: 16px;
 	background: #55595c;
 	text-transform: capitalize;
 	
-	width: 100%;
+	width: fit-content;
 	padding: 15px;
+	margin: auto;
 	border: none;
 	border-radius: 15px;
 	cursor: pointer;
