--- a/web_app/contatos/templates/base/base_card_parceiro.html
+++ b/web_app/contatos/templates/base/base_card_parceiro.html
@@ -2,13 +2,13 @@
 {% block content %}
 <div class="card-page-img-parceiro"></div>
 <div class="card-page-text-parceiro">
-    <p class="card-page-status-parceiro">{% if status == 'A' %}ativo{% else %}inativo{% endif %}</p>
-    <h3 class="card-page-name-parceiro">{{ name }}</h3>
+    <p class="card-page-status-parceiro">{% if parceiro.status == 'A' %}ativo{% else %}inativo{% endif %}</p>
+    <h3 class="card-page-name-parceiro">{{ parceiro.nome }}</h3>
 </div>
 {% endblock %}
 
-{% block card_info_url %}{% url "parceiro_detail" pk=1 %}{% endblock %}
+{% block card_info_url %}{% url "parceiro_detail" pk=parceiro.codigo %}{% endblock %}
 
 {% block particular_action %}
-<div class="status-parceiro-widget {% if status == 'A' %}status-green{% else %}status-red{% endif %}"></div>
+<div class="status-parceiro-widget {% if parceiro.status == 'A' %}status-green{% else %}status-red{% endif %}"></div>
 {% endblock %}
