--- a/web_app/contatos/templates/contatos/reuniao.html
+++ b/web_app/contatos/templates/contatos/reuniao.html
@@ -3,8 +3,10 @@
 {% block title %}Reuniões{% endblock %}
 
 {% block main_content_list %}
-    <h1>Hello World</h1>
+{% for reuniao in reunioes %}
+	{% include "base/base_card_reuniao.html" %}
+{% endfor %}
 {% endblock %}
 {% block aside_content %}
-    {% include "base/register_modal.html" %}
+	{% include "base/register_modal.html" %}
 {% endblock %}
