--- a/web_app/contatos/templates/contatos/reuniao.html
+++ b/web_app/contatos/templates/contatos/reuniao.html
@@ -11,5 +11,6 @@
 {% endfor %}
 {% endblock %}
 {% block aside_content %}
-	{% include "base/register_modal.html" %}
+	{% url "reuniao_create" as url_reuniao_create %}
+	{% include "base/register_modal.html" with url=url_reuniao_create %}
 {% endblock %}
