--- a/web_app/contatos/templates/base/base_form_page.html
+++ b/web_app/contatos/templates/base/base_form_page.html
@@ -27,7 +27,7 @@
 				<button type="submit" class="btn-data-page btn-data-submit">cadastrar</button>
 			</form>
 			<div class="btn-data-page-container">
-				<button onclick="window.history.back()" class="btn-data-page">voltar</button>
+				<a href="{{ back_url }}" class="btn-data-page">voltar</a>
 				<a href="#" class="btn-data-page">limpar</a>
 			</div>
         </div>
