--- a/web_app/contatos/templates/base/base_info_page.html
+++ b/web_app/contatos/templates/base/base_info_page.html
@@ -24,7 +24,7 @@
 				{% endfor %}
 			</form>
 			<div class="btn-data-page-container">
-				<button onclick="window.history.back()" class="btn-data-page">voltar</button>
+				<a href="{{ back_url }}" class="btn-data-page">voltar</a>
 				<a href="{{ edit_url }}" class="btn-data-page">editar</a>
 			</div>
         </div>
