--- a/web_app/contatos/templates/base/base_form_page.html
+++ b/web_app/contatos/templates/base/base_form_page.html
@@ -24,7 +24,7 @@
 						{% endif %}
 					</div>
 				{% endfor %}
-				<button type="submit" class="btn-data-page btn-data-submit">cadastrar</button>
+				<button type="submit" class="btn-data-page btn-data-submit">{{ btn_confirmar_form|default:"cadastrar"}}</button>
 			</form>
 			<div class="btn-data-page-container">
 				<a href="{{ back_url }}" class="btn-data-page">voltar</a>
