--- a/web_app/contatos/templates/base/base_card_reuniao.html
+++ b/web_app/contatos/templates/base/base_card_reuniao.html
@@ -12,5 +12,6 @@
 {% block card_info_url %}{% url "reuniao_detail" pk=reuniao.pk %}{% endblock %}
 
 {% block particular_action %}
-<a href="{% block card_action_url %}#{% endblock %}" class="btn-card-page-new-action" id="btn-show-relatorio" data-reuniao-id="{{ reuniao.pk }}" data-check-url="{% url 'warning_relatorio' pk=object.pk %}">>relatório</a>
+<div id="modal-generic"></div>
+<a href="{% block card_action_url %}#{% endblock %}" class="btn-show-relatorio btn-card-page-new-action" data-modal-url="{% url 'warning_relatorio' pk=reuniao.pk %}" data-reuniao-id="{{ reuniao.pk }}" data-check-url="{% url 'warning_relatorio' pk=reuniao.pk %}">relatório</a>
 {% endblock %}
