--- a/web_app/contatos/templates/base/base_form_page.html
+++ b/web_app/contatos/templates/base/base_form_page.html
@@ -7,7 +7,8 @@
         <div class="form-info">
 			<form method="post" action="{{ form_action_url }}" enctype="multipart/form-data">
 				{% csrf_token %}
-				{{ form.errors }}
+				<ul class="errorlist nonfield-errors"></ul>
+
 				{% for field in form %}
 					<div class="form-group">
 						<span class="text-label-info">{{ field.label_tag }}</span>
@@ -24,9 +25,10 @@
 						{% endif %}
 					</div>
 				{% endfor %}
-				<button type="submit" class="btn-data-page btn-data-submit">{{ btn_confirmar_form|default:"cadastrar"}}</button>
+				<button type="button" id="btn-confirm-action-data" class="btn-data-page btn-data-submit" data-entity-type="{{ entity_type }}" data-action-type="{{ btn_confirmar_form }}" data-object-id="{{ object_id|default:'' }}" data-modal-url="{% url 'generic_alter_modal' %}">{{ btn_confirmar_form|default:"cadastrar"}}</button>
 			</form>
 			<div class="btn-data-page-container">
+				<div id="modal-generic"></div>
 				<a href="{{ back_url }}" class="btn-data-page">voltar</a>
 				<a href="#" class="btn-data-page">limpar</a>
 			</div>
