--- a/web_app/static/style/main_page.css
+++ b/web_app/static/style/main_page.css
@@ -4,6 +4,7 @@
     grid-template-columns: 65% 30%;
     column-gap: 5%;
 
+	height: calc(100vh - 40px);
     padding: 20px 50px;
 }
 
@@ -13,4 +14,6 @@
 
 .main-content-page-list {
     width: 100%;
+
+	overflow-y: auto;
 }
