--- a/web_app/contatos/templates/contatos/parceiro.html
+++ b/web_app/contatos/templates/contatos/parceiro.html
@@ -5,6 +5,9 @@
 {% block main_content_list %}
 {% for parceiro in parceiros %}
 	{% include "base/base_card_parceiro.html" %}
+
+{% empty %}
+	<h1>Sem registros</h1>
 {% endfor %}
 {% endblock %}
 {% block aside_content %}
