Criação da aba membros

--- a/web_app/contatos/templates/base/menu.html
+++ b/web_app/contatos/templates/base/menu.html
@@ -2,8 +2,9 @@
 <header class="menu-vertical">
 	<nav class="header-nav">
 		<a href="{% url 'parceiro_page' %}" id="header-logo"><img src="{% static 'image/iabs_logo2.png' %}" alt="Logo IABS" class="img-inside-header"></a>
-		<a href="{% url 'parceiro_page' %}" class="header-opc {% if 'parceiros' in request.path %}header-opc-active{% endif %}"><span class="opc-icon"><i class="bx bx-group"></i></span><span class="opc-text">parceiro</span></a>
-		<a href="{% url 'reuniao_page' %}" class="header-opc {% if 'reunioes' in request.path %}header-opc-active{% endif %}"><span class="opc-icon"><i class="bx bx-calendar-event"></i></span><span class="opc-text">reunião</span></a>
+		<a href="{% url 'parceiro_page' %}" class="header-opc {% if 'parceiros' in request.path %}header-opc-active{% endif %}"><span class="opc-icon"><i class="bx bx-group"></i></span><span class="opc-text">parceiros</span></a>
+		<a href="{% url 'reuniao_page' %}" class="header-opc {% if 'reunioes' in request.path %}header-opc-active{% endif %}"><span class="opc-icon"><i class="bx bx-calendar-event"></i></span><span class="opc-text">reuniões</span></a>
+		<a href="{% url 'membro_page' %}" class="header-opc {% if 'membros' in request.path %}header-opc-active{% endif %}"><span class="opc-icon"><i class="bx bx-calendar-event"></i></span><span class="opc-text">membros</span></a>
 
 		<hr class="hr-menu">
 
