--- a/web_app/contatos/templates/contatos/membro.html
+++ b/web_app/contatos/templates/contatos/membro.html
@@ -1,6 +1,6 @@
 {% extends "base/base_main_page.html" %}
 
-{% block title %}Parceiros{% endblock %}
+{% block title %}Membros{% endblock %}
 
 {% block main_content_list %}
 {% for membro in membros %}
