Consulta ao cep e mostrar campos dinamicamente

--- a/web_app/contatos/templates/base/base.html
+++ b/web_app/contatos/templates/base/base.html
@@ -21,6 +21,7 @@
 		{% block content %}
 		{% endblock %}
 	<script src="{% static 'js/modal.js' %}"></script>
+	<script src="{% static 'js/forms.js' %}"></script>
 </body>
 </html>
 
