--- a/web_app/static/style/info_page.css
+++ b/web_app/static/style/info_page.css
@@ -110,3 +110,7 @@ input[readonly], select[readonly], textarea[readonly] {
 
 	cursor: pointer;
 }
+
+.hidden-field {
+	display: none !important;
+}
