--- a/web_app/static/style/login.css
+++ b/web_app/static/style/login.css
@@ -135,3 +135,48 @@ hr {
 	text-transform: uppercase;
 	cursor: pointer;
 }
+
+.messages-container {
+	position: fixed;
+	top: 20px;
+	left: 50%;
+	transform: translateX(-50%);
+	width: 80%;
+	max-width: 400px;
+	z-index: 1000; 
+	text-align: center;
+}
+
+.alert {
+	padding: 15px;
+	margin-bottom: 10px;
+	border: 1px solid transparent;
+	border-radius: 4px;
+	opacity: 0.95;
+	box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+}
+
+.alert.success {
+	color: #3c763d;
+	background-color: #dff0d8;
+	border-color: #d6e9c6;
+}
+
+.alert.error {
+	color: #a94442;
+	background-color: #f2dede;
+	border-color: #ebccd1;
+}
+
+.alert.info {
+	color: #31708f;
+	background-color: #d9edf7;
+	border-color: #bce8f1;
+}
+
+.alert.warning {
+	color: #8a6d3b;
+	background-color: #fcf8e3;
+	border-color: #faebcc;
+}
+
